--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@ layout: compress
 
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
-  <head>
+  <!-- <head>
     {% include head.html %}
     {% include head/custom.html %}
-  </head>
+  </head> -->
 
   <body>
 
@@ -20,12 +20,12 @@ layout: compress
 
     </script>
 
-    <div class="page__footer">
+    <!-- <div class="page__footer">
       <footer>
         {% include footer/custom.html %}
         {% include footer.html %}
       </footer>
-    </div>
+    </div> -->
 
     {% include scripts.html %}
 
