--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,15 @@ layout: compress
 
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
-  <!-- <head>
+  <head>
     {% include head.html %}
     {% include head/custom.html %}
-  </head> -->
+  </head>
 
   <body>
 
     {% include browser-upgrade.html %}
-    {% include masthead.html %}
+    <!-- {% include masthead.html %} -->
 
     {{ content }}
 
@@ -25,9 +25,9 @@ layout: compress
         {% include footer/custom.html %}
         {% include footer.html %}
       </footer>
-    </div> -->
+    </div>
 
-    {% include scripts.html %}
+    {% include scripts.html %} -->
 
   </body>
 </html>
