--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,20 +14,20 @@ layout: compress
   <body>
 
     {% include browser-upgrade.html %}
-    <!-- {% include masthead.html %} -->
+    {% include masthead.html %}
 
     {{ content }}
 
     </script>
 
-    <!-- <div class="page__footer">
+    <div class="page__footer">
       <footer>
-        {% include footer/custom.html %}
-        {% include footer.html %}
+        <!-- {% include footer/custom.html %} -->
+        <!-- {% include footer.html %} -->
       </footer>
     </div>
 
-    {% include scripts.html %} -->
+    {% include scripts.html %}
 
   </body>
 </html>
