--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@ layout: compress
 
     <div class="page__footer">
       <footer>
-        <!-- {% include footer/custom.html %} -->
-        <!-- {% include footer.html %} -->
+        {% include footer/custom.html %}
+        {% include footer.html %}
       </footer>
     </div>
 
