--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,13 +19,13 @@ layout: compress
     {{ content }}
 
     </script>
-
+<!-- 
     <div class="page__footer">
       <footer>
         {% include footer/custom.html %}
         {% include footer.html %}
       </footer>
-    </div>
+    </div> -->
 
     {% include scripts.html %}
 
