--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -11,7 +11,7 @@
           transform: translate3d(0, 0 , 0);
 
   @include clearfix();
-  margin-bottom: 3em;
+  margin-top: 3em;
   margin-bottom: 1em;
 
   @include breakpoint($large) {
