--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -6,6 +6,7 @@
   @include container;
   @include clearfix;
   margin-top: 2em;
+  padding-top: 2em;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
