--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -105,8 +105,14 @@
         <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar-square ai-fw"></i>All Publications</a></li>
       {% endif %}
       {% if author.googlescholar %}
-        <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar ai-fw"></i>Google Scholar</a></li>
+        <li><a href="{{ author.googlescholar }}">Google Scholar</a></li>
       {% endif %}
+      {% if author.personal %}
+        <li><a href="https://jasonwei20.github.io/personal/">Personal Page</a></li>
+      {% endif %}
+      <!-- {% if author.googlescholar %}
+        <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar ai-fw"></i>Google Scholar</a></li>
+      {% endif %} -->
       {% if author.orcid %}
         <li><a href="{{ author.orcid }}"><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
       {% endif %}
